@@ -36,8 +36,10 @@ nethack-api-putstr")
 (defface nethack-green
   `((((type tty) (class color))
      (:foreground "green"))
-    (((class color))
+    (((class color) (background dark))
      (:foreground "green"))
+    (((class color) (background light))
+     (:foreground "lime green"))
     (t (:foreground "gray")))
   "nethack green")
 
@@ -68,8 +70,10 @@ nethack-api-putstr")
 (defface nethack-cyan
   `((((type tty) (class color))
      (:foreground "cyan"))
-    (((class color))
+    (((class color) (background dark))
      (:foreground "cyan"))
+    (((class color) (background light))
+     (:foreground "cyan4"))
     (t (:foreground "gray")))
   "nethack cyan")
 
@@ -102,8 +106,10 @@ nethack-api-putstr")
 (defface nethack-bright-green
   `((((type tty) (class color))
      (:foreground "green" :bold t))
-    (((class color))
+    (((class color) (background dark))
      (:foreground "lightgreen"))
+    (((class color) (background light))
+     (:foreground "dark green"))
     (t (:foreground "gray")))
   "nethack bright green")
 
@@ -120,8 +126,10 @@ nethack-api-putstr")
 (defface nethack-bright-blue
   `((((type tty) (class color))
      (:foreground "blue" :bold t))
-    (((class color))
+    (((class color) (background dark))
      (:foreground "lightblue"))
+    (((class color) (background light))
+     (:foreground "dodger blue"))
     (t (:foreground "gray")))
   "nethack bright blue")
 
@@ -136,8 +144,10 @@ nethack-api-putstr")
 (defface nethack-bright-cyan
   `((((type tty) (class color))
      (:foreground "cyan" :bold t))
-    (((class color))
+    (((class color) (background dark))
      (:foreground "cyan"))
+    (((class color) (background light))
+     (:foreground "cyan3"))
     (t (:foreground "gray")))
   "nethack bright cyan")
 
